create helper file and move html parser to class

--- a/TokenizerWeight_Demo.ipynb
+++ b/TokenizerWeight_Demo.ipynb
@@ -8,22 +8,18 @@
    "source": [
     "# import sys  \n",
     "# sys.path.insert(0, './Tokenizer.py')\n",
-    "# from Tokenizer import Tokenizer"
+    "# from Tokenizer import Tokenizer\n",
+    "\n",
+    "# parsedInput = Tokenizer('Test.json')\n",
+    "# parsedInput.printFreq()\n",
+    "\n",
+    "from HelperClass import HTMLTokenizer\n",
+    "from helper import cleanHtml"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# parsedInput = Tokenizer('Test.json')\n",
-    "# parsedInput.printFreq()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +28,7 @@
        "'utf-8'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,38 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import lxml.html as lh\n",
-    "\n",
-    "from bs4 import UnicodeDammit\n",
-    "from lxml.html.clean import Cleaner\n",
-    "\n",
-    "#Decode html string\n",
-    "#Cite: https://lxml.de/elementsoup.html\n",
-    "def decode_html(html_string):\n",
-    "    converted = UnicodeDammit(html_string)\n",
-    "\n",
-    "    #Return original string if unable to decode using library\n",
-    "    if not converted.unicode_markup:\n",
-    "        return html_string\n",
-    "    return converted.unicode_markup\n",
-    "\n",
-    "def cleanHtml(html_content):\n",
-    "    cleaner = Cleaner(page_structure=False, meta=True, comments=True,style=True, inline_style=True, processing_instructions=True, remove_unknown_tags=True)\n",
-    "    decoded_html = decode_html(html_content)\n",
-    "    clean_html = cleaner.clean_html(decoded_html)\n",
-    "    return clean_html\n",
-    "\n",
-    "def getDoc(html_content):\n",
-    "    return lh.fromstring(html_content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -580,413 +545,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computational Vision | ICS | UC Irvine {'title'}\n",
-      "\n",
-      "          Computational Vision at UC Irvine   {'h1'}\n",
-      "home {'a'}\n",
-      "projects {'a'}\n",
-      "people {'a'}\n",
-      "publications {'a'}\n",
-      "datasets {'a'}\n",
-      "events {'a'}\n",
-      "courses {'a'}\n",
-      "contact {'a'}\n",
-      "links {'a'}\n",
-      "Overview: {'normal'}\n",
-      "\n",
-      "              We are interested in algorithms that can find objects in images\n",
-      "              and video. Such algorithms have practical implications for\n",
-      "              applications such as image search and robotic navigation.\n",
-      "              Important and open issues include representation and learning -\n",
-      "              what makes a good model of an object, and how can one learn such a\n",
-      "              representation? To help answer such questions, we employ both\n",
-      "              generative and discriminative machine-learning techniques.\n",
-      "             {'normal'}\n",
-      "Publications: {'normal'}\n",
-      "Low-rank Bilinear Pooling for Fine-grained Classification {'a'}\n",
-      "Shu Kong {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      "IEEE\n",
-      "                Conference on Computer Vision and Pattern Recognition (CVPR),\n",
-      "                2017. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Lifting {GIS} Maps into Strong Geometric Context for Scene\n",
-      "                  Understanding {'a'}\n",
-      "Raúl Díaz {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Minhaeng Lee {'a'}\n",
-      ",\n",
-      "                Jochen Schubert,\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      "WACV,\n",
-      "                2016. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Occlusion Coherence: Detecting and Localizing Occluded\n",
-      "                  Faces {'a'}\n",
-      "Golnaz Ghiasi {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      "arXiv:,\n",
-      "                2015, abs/1506.08347. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Multi-scale recognition with DAG-CNNs {'a'}\n",
-      "Songfan Yang {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Deva Ramanan {'a'}\n",
-      "IEEE\n",
-      "                International Conference on Computer Vision, 2015. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Using segmentation to predict the absence of occluded\n",
-      "                  parts {'a'}\n",
-      "Golnaz Ghiasi {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      "British\n",
-      "                Machine Vision Conference (BMVC), 2015. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Learning Optimal Parameters for Multi-target Tracking {'a'}\n",
-      "Shaofei Wang {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      "British\n",
-      "                Machine Vision Conference (BMVC), 2015. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Do We Need More Training Data? {'a'}\n",
-      "Xiangxin Zhu {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Carl Vondrick {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Deva Ramanan {'a'}\n",
-      "International Journal of Computer Vision, 2015, 1--17. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Lifting {GIS} Maps into Strong Geometric Context {'a'}\n",
-      "Raúl Díaz {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Minhaeng Lee {'a'}\n",
-      ",\n",
-      "                Jochen Schubert,\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      "arXiv:,\n",
-      "                2015, abs/1507.03698. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Parsing Occluded People {'a'}\n",
-      "Golnaz Ghiasi {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Yi Yang {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      "CVPR,\n",
-      "                2014. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Occlusion Coherence: Localizing Occluded Faces with a\n",
-      "                  Hierarchical Deformable Part Model {'a'}\n",
-      "Golnaz Ghiasi {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      "CVPR,\n",
-      "                2014. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Learning Multi-target Tracking with Quadratic Object\n",
-      "                  Interactions {'a'}\n",
-      "Shaofei Wang {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      "arXiv:,\n",
-      "                2014, abs/1412.2066. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Discriminative models for multi-class object layout {'a'}\n",
-      "Chaitanya Desai {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      "International Journal of Computer Vision, 2011. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Where's Waldo: Matching People in Images of Crowds {'a'}\n",
-      "Rahul Garg,\n",
-      "                 {'normal'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                Steve Seitz, Noah Snavely {'normal'}\n",
-      "IEEE Conference on\n",
-      "                Computer Vision and Pattern Recognition (CVPR), 2011. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Local Distance Functions: A Taxonomy, New Algorithms, and an\n",
-      "                  Evaluation {'a'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                Simon Baker {'normal'}\n",
-      "IEEE Transactions on Pattern Analysis and\n",
-      "                Machine Intelligence (PAMI), 2011. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Efficiently Scaling Up Video Annotation with Crowdsourced\n",
-      "                  Marketplaces {'a'}\n",
-      "Carl Vondrick {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                Donald Patterson {'normal'}\n",
-      "Proc. of the European Conference on\n",
-      "                Computer Vision, 2010. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Multiresolution models for object detection {'a'}\n",
-      "Dennis Park {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      "ECCV,\n",
-      "                2010. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Layered Object Detection for Multi-Class Segmentation {'a'}\n",
-      "Yi Yang {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Sam Hallman {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      "CVPR,\n",
-      "                2010. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Object Detection with Discriminatively Trained Part-Based\n",
-      "                  Models {'a'}\n",
-      "Pedro Felzenszwalb, Ross Girshick,\n",
-      "                David McAllester,\n",
-      "                 {'normal'}\n",
-      "Deva Ramanan {'a'}\n",
-      "IEEE\n",
-      "                Pattern Analysis and Machine Intelligence (PAMI), 2009. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Local Distance Functions: A Taxonomy, New Algorithms, and an\n",
-      "                  Evaluation {'a'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                Simon Baker {'normal'}\n",
-      "International Conference on Computer\n",
-      "                Vision (ICCV), 2009. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Discriminative models for multi-class object layout {'a'}\n",
-      "Chaitanya Desai {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      "IEEE\n",
-      "                International Conference on Computer Vision, 2009. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Bilinear classifiers for visual recognition {'a'}\n",
-      "Hamed Pirsiavash {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      "Neural\n",
-      "                Info. Proc. Systems (NIPS), 2009. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Increasing the density of active appearance models {'a'}\n",
-      "Kannan Ramnath, Simon Baker, Ian Matthews,\n",
-      "                 {'normal'}\n",
-      "Deva Ramanan {'a'}\n",
-      "IEEE\n",
-      "                Conference on Computer Vision and Pattern Recognition (CVPR),\n",
-      "                2008. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "A Discriminatively Trained, Multiscale, Deformable Part\n",
-      "                  Model {'a'}\n",
-      "Pedro Felzenszwalb, David McAllester,\n",
-      "                 {'normal'}\n",
-      "Deva Ramanan {'a'}\n",
-      "IEEE\n",
-      "                Conference on Computer Vision and Pattern Recognition (CVPR),\n",
-      "                2008. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Leveraging Archival Video for Building Face Datasets {'a'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                Simon Baker, Sham Kakade {'normal'}\n",
-      "ICCV, 2007, 141. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Learning to parse images of articulated bodies {'a'}\n",
-      "Deva Ramanan {'a'}\n",
-      "Advances in Neural Information Processing Systems 19,\n",
-      "                2007, 1129--1136. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Using Segmentation to Verify Object Hypotheses {'a'}\n",
-      "Deva Ramanan {'a'}\n",
-      "CVPR, 2007, 1-8. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Building Models of Animals from Video {'a'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                D.A. Forsyth, Kobus Barnard {'normal'}\n",
-      "PAMI, 2006, 28, 8,\n",
-      "                1319-1334. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "The Rate Adapting Poisson Model for Information Retrieval and\n",
-      "                  Object Recognition {'a'}\n",
-      "P. Gehler, A. Holub,\n",
-      "                 {'normal'}\n",
-      "Max Welling {'a'}\n",
-      "Proceedings\n",
-      "                of the 23rd International Conference on Machine Learning (ICML\n",
-      "                2006), 2006, 337-344. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Cue Integration for Figure/Ground Labeling {'a'}\n",
-      "Xiaofeng Ren,\n",
-      "                 {'normal'}\n",
-      "Charless Fowlkes {'a'}\n",
-      ",\n",
-      "                Jitendra Malik {'normal'}\n",
-      "Advances in Neural Information\n",
-      "                Processing Systems 18, 2006, 1121--1128. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Training Deformable Models for Localization {'a'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                Cristian Sminchisescu {'normal'}\n",
-      "CVPR, 2006, I: 206-213. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Combining Generative Models and Fisher Kernels for Object\n",
-      "                  Recognition {'a'}\n",
-      "Alex Holub,\n",
-      "                 {'normal'}\n",
-      "Max Welling {'a'}\n",
-      ",\n",
-      "                Pietro Perona {'normal'}\n",
-      "ICCV, 2005, I: 136-143. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Strike a Pose: Tracking People by Finding Stylized Poses {'a'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                D.A. Forsyth, Andrew Zisserman {'normal'}\n",
-      "CVPR, 2005, I:\n",
-      "                271-278. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Detecting, Localizing and Recovering Kinematics of Textured\n",
-      "                  Animals {'a'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                D.A. Forsyth, Kobus Barnard {'normal'}\n",
-      "CVPR, 2005, II:\n",
-      "                635-642. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Using temporal coherence to build models of animals {'a'}\n",
-      "Deva Ramanan {'a'}\n",
-      ",\n",
-      "                D.A. Forsyth {'normal'}\n",
-      "ICCV, 2003, 338-345. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Viewpoint-Invariant Learning and Detection of Human Heads {'a'}\n",
-      "Markus Weber, Wolfgang Einhaeuser,\n",
-      "                 {'normal'}\n",
-      "Max Welling {'a'}\n",
-      ",\n",
-      "                Pietro Perona {'normal'}\n",
-      "AFGR, 2000, 20-27. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Unsupervised Learning of Models for Recognition {'a'}\n",
-      "Markus Weber,\n",
-      "                 {'normal'}\n",
-      "Max Welling {'a'}\n",
-      ",\n",
-      "                Pietro Perona {'normal'}\n",
-      "ECCV, 2000, I: 18-32. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Towards Automatic Discovery of Object Categories {'a'}\n",
-      "Markus Weber,\n",
-      "                 {'normal'}\n",
-      "Max Welling {'a'}\n",
-      ",\n",
-      "                Pietro Perona {'normal'}\n",
-      "CVPR, 2000, II: 101-108. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Unsupervised Learning of Models for Recognition {'a'}\n",
-      "Markus Weber,\n",
-      "                 {'normal'}\n",
-      "Max Welling {'a'}\n",
-      ",\n",
-      "                Pietro Perona {'normal'}\n",
-      "JNSC, 1999. {'normal'}\n",
-      "[pdf] {'a'}\n",
-      "Computational Vision {'a'}\n",
-      " |\n",
-      "           {'normal'}\n",
-      "School of Information and Computer Sciences {'a'}\n",
-      "\n",
-      "          |\n",
-      "           {'normal'}\n",
-      "UC Irvine {'a'}\n",
-      "© 2007-2017 UC Irvine {'normal'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sys  \n",
-    "sys.path.insert(0, './Tokenizer.py')\n",
-    "from HelperClass import WeightFlags, Document\n",
-    "from html.parser import HTMLParser\n",
-    "\n",
-    "class MyHTMLParser(HTMLParser):\n",
-    "    def __init__(self, *, convert_charrefs: bool = True) -> None:\n",
-    "        super().__init__(convert_charrefs=convert_charrefs)\n",
-    "        self._weights = WeightFlags()\n",
-    "\n",
-    "    def handle_starttag(self, tag, attrs):\n",
-    "        if self._weights.isWeight(tag):\n",
-    "            self._weights.setField(tag)\n",
-    "\n",
-    "    def handle_endtag(self, tag):\n",
-    "        if self._weights.isWeight(tag):\n",
-    "            self._weights.removeField(tag)\n",
-    "\n",
-    "    def handle_data(self, data):\n",
-    "        if data.strip() != '':\n",
-    "            #Call tokenizer on data\n",
-    "            print(data, self._weights.getActiveFields())\n",
-    "\n",
-    "parser = MyHTMLParser()\n",
+    "parser = HTMLTokenizer()\n",
     "parser.feed(cleanHtml(htmlContent))"
    ]
   }
