--- a/TokenizerWeight_Demo.ipynb
+++ b/TokenizerWeight_Demo.ipynb
@@ -107,6 +107,50 @@
     "parser = HTMLTokenizer()\n",
     "parser.feed(cleanHtml(htmlContent))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DocId: 1\n",
+       "\tWeights:\n",
+       "\t\ttitle:{1, 2}\n",
+       "\t\th2:{3, 4, 5, 6}\n",
+       "\t\ta:{6}\n",
+       "\t\tnormal:{7, 8, 9, 10, 11}\n",
+       "\tToken: my\n",
+       "\t\tPositions: {1, 5}\n",
+       "\tToken: page\n",
+       "\t\tPositions: {2, 6}\n",
+       "\tToken: welcome\n",
+       "\t\tPositions: {3}\n",
+       "\tToken: to\n",
+       "\t\tPositions: {4}\n",
+       "\tToken: this\n",
+       "\t\tPositions: {7}\n",
+       "\tToken: is\n",
+       "\t\tPositions: {8}\n",
+       "\tToken: the\n",
+       "\t\tPositions: {9}\n",
+       "\tToken: first\n",
+       "\t\tPositions: {10}\n",
+       "\tToken: paragraph\n",
+       "\t\tPositions: {11}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parser.getDoc().setDocId(1)\n",
+    "parser.getDoc()"
+   ]
   }
  ],
  "metadata": {
