add clear function to parser

--- a/TokenizerWeight_Demo.ipynb
+++ b/TokenizerWeight_Demo.ipynb
@@ -94,7 +94,7 @@
      "text": [
       "My page {'title'}\n",
       "Welcome to my  {'h2'}\n",
-      "page {'a', 'h2'}\n",
+      "page {'h2', 'a'}\n",
       "This is the first paragraph {'normal'}\n",
       "\n",
       "    .\n",
@@ -114,42 +114,64 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DocId: 1\n",
+      "\tWeights:\n",
+      "\t\ttitle:{1, 2}\n",
+      "\t\th2:{3, 4, 5, 6}\n",
+      "\t\ta:{6}\n",
+      "\t\tnormal:{7, 8, 9, 10, 11}\n",
+      "\tToken: my\n",
+      "\t\tPositions: {1, 5}\n",
+      "\tToken: page\n",
+      "\t\tPositions: {2, 6}\n",
+      "\tToken: welcome\n",
+      "\t\tPositions: {3}\n",
+      "\tToken: to\n",
+      "\t\tPositions: {4}\n",
+      "\tToken: this\n",
+      "\t\tPositions: {7}\n",
+      "\tToken: is\n",
+      "\t\tPositions: {8}\n",
+      "\tToken: the\n",
+      "\t\tPositions: {9}\n",
+      "\tToken: first\n",
+      "\t\tPositions: {10}\n",
+      "\tToken: paragraph\n",
+      "\t\tPositions: {11}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "parser.getDoc().setDocId(1) #Set docId\n",
+    "doc = parser.getDoc()\n",
+    "parser.clear() #reset parser to parse new doc\n",
+    "\n",
+    "print(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "DocId: 1\n",
-       "\tWeights:\n",
-       "\t\ttitle:{1, 2}\n",
-       "\t\th2:{3, 4, 5, 6}\n",
-       "\t\ta:{6}\n",
-       "\t\tnormal:{7, 8, 9, 10, 11}\n",
-       "\tToken: my\n",
-       "\t\tPositions: {1, 5}\n",
-       "\tToken: page\n",
-       "\t\tPositions: {2, 6}\n",
-       "\tToken: welcome\n",
-       "\t\tPositions: {3}\n",
-       "\tToken: to\n",
-       "\t\tPositions: {4}\n",
-       "\tToken: this\n",
-       "\t\tPositions: {7}\n",
-       "\tToken: is\n",
-       "\t\tPositions: {8}\n",
-       "\tToken: the\n",
-       "\t\tPositions: {9}\n",
-       "\tToken: first\n",
-       "\t\tPositions: {10}\n",
-       "\tToken: paragraph\n",
-       "\t\tPositions: {11}"
+       "DocId: 0\n",
+       "\tWeights:None"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parser.getDoc().setDocId(1)\n",
-    "parser.getDoc()"
+    "parser.getDoc() #Parser cleared so doc contains no items"
    ]
   }
  ],
