--- a/TokenizerWeight_Demo.ipynb
+++ b/TokenizerWeight_Demo.ipynb
@@ -92,31 +92,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My page {'title'}\n",
-      "Welcome to my  {'h2'}\n",
-      "page {'h2', 'a'}\n",
-      "This is the first paragraph {'normal'}\n",
-      "\n",
-      "    .\n",
-      "    \n",
-      "   {'normal'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "parser = HTMLTokenizer()\n",
-    "parser.feed(cleanHtml(htmlContent))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "DocId: 1\n",
       "\tWeights:\n",
       "\t\ttitle:{1, 2}\n",
@@ -145,7 +120,8 @@
     }
    ],
    "source": [
-    "\n",
+    "parser = HTMLTokenizer() #Create parser obj\n",
+    "parser.feed(cleanHtml(htmlContent)) #pass in clean html to parse\n",
     "parser.getDoc().setDocId(1) #Set docId\n",
     "doc = parser.getDoc()\n",
     "parser.clear() #reset parser to parse new doc\n",
@@ -155,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +141,7 @@
        "\tWeights:None"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
