--- a/Report/Report.ipynb
+++ b/Report/Report.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "713"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "def getWeightStr(invIndex):\n",
-    "    wStr = '| Weights | '\n",
+    "    wStr = '| Weights |  |'\n",
     "    for i in range(1, invIndex.getSize()+1):\n",
     "        wCount = 0\n",
     "        for w in invIndex[i].getWeights():\n",
@@ -189,7 +189,7 @@
     "    tStr = ''\n",
     "    for tok in getAllTokens(invIndex):\n",
     "        if not tStr:\n",
-    "            tStr += f'| Tokens  | {getTokenStr(invIndex, tok)}'\n",
+    "            tStr += f'| Tokens  | {getTokenStr(invIndex, tok)} '\n",
     "        else:\n",
     "            tStr += f'|  | {getTokenStr(invIndex, tok)}'\n",
     "        tStr += '\\n'\n",
@@ -232,13 +232,13 @@
    "outputs": [],
    "source": [
     "reportFile = open(\"Report/Report.md\", \"a\")\n",
-    "dStr = '| DocId'\n",
+    "dStr = '| DocId   |'\n",
     "for i in range(1, invIndex.getSize()+1):\n",
     "    dStr += f' | {i}'\n",
     "dStr += ' |'\n",
     "reportFile.write(dStr+'\\n')\n",
     "dStr = '|'\n",
-    "for i in range(0, invIndex.getSize()+1):\n",
+    "for i in range(0, invIndex.getSize()+2):\n",
     "    dStr += '-----'\n",
     "    dStr += ' |'\n",
     "reportFile.write(dStr+'\\n')\n",
