--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -4,42 +4,50 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1: ({'titles': {1, 2, 3}, 'bolded': {5, 6, 7}}, {'tropical': {18, 7, 23}})}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#This cell is a raw example of a single item in our inverted index \n",
-    "\n",
-    "#Doc information\n",
-    "docId = 1\n",
-    "weights = {'titles':{1,2,3},'bolded':{5,6,7}}\n",
-    "\n",
-    "#Posting information\n",
-    "positions = {7,18,23}\n",
-    "posting = {'tropical': positions}\n",
-    "\n",
-    "doc = (weights, posting)\n",
-    "\n",
-    "#Raw Data structure to hold docId with multiple token postings\n",
-    "invertedIndex = { docId: doc }\n",
-    "print(invertedIndex)"
+    "import sys  \n",
+    "sys.path.insert(0, './HelperClass.py')\n",
+    "from HelperClass import InvertedIndex, Token, Posting"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tDocId: 1, Freq: 2\n",
+      "\t\tPositions: {1, 2}\n",
+      "\t\tWeights:\n",
+      "\t\t\ttitle:{1, 2}\n",
+      "\t\t\tnormal:{3}\n",
+      "\t\t\tbold:{4}\n"
+     ]
+    }
+   ],
    "source": [
-    "import sys  \n",
-    "sys.path.insert(0, './HelperClass.py')\n",
-    "from HelperClass import InvertedIndex, Posting, Document"
+    "#Create posting obj to hold positions of where fish token occurs\n",
+    "fishP = Posting(1)\n",
+    "fishP.addPosition(1)\n",
+    "fishP.addPosition(2)\n",
+    "fishP.addWeight('title', 1)\n",
+    "fishP.addWeight('title', 2)\n",
+    "fishP.addWeight('normal', 3)\n",
+    "fishP.addWeight('bold', 4)\n",
+    "\n",
+    "fishP2 = Posting(2)\n",
+    "fishP2.addPosition(3)\n",
+    "fishP2.addPosition(7)\n",
+    "fishP2.addPosition(10)\n",
+    "fishP2.addWeight('title', 5)\n",
+    "fishP2.addWeight('title', 9)\n",
+    "fishP2.addWeight('bold', 4)\n",
+    "\n",
+    "print(fishP)"
    ]
   },
   {
@@ -51,20 +59,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tToken: fish\n",
-      "\t\tPositions: {1, 2}\n"
+      "Token: fish, Total Freq: 5\n",
+      "\tDocId: 1, Freq: 2\n",
+      "\t\tPositions: {1, 2}\n",
+      "\t\tWeights:\n",
+      "\t\t\ttitle:{1, 2}\n",
+      "\t\t\tnormal:{3}\n",
+      "\t\t\tbold:{4}\n",
+      "\tDocId: 2, Freq: 3\n",
+      "\t\tPositions: {10, 3, 7}\n",
+      "\t\tWeights:\n",
+      "\t\t\ttitle:{9, 5}\n",
+      "\t\t\tbold:{4}\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "#Create posting obj to hold positions of where token occurs\n",
-    "fishP = Posting('fish') \n",
+    "#Create token obj to hold multiple postings\n",
+    "fishTok = Token('fish')\n",
+    "fishTok.addPosting(fishP)\n",
+    "fishTok.addPosting(fishP2)\n",
     "\n",
-    "#Add positions where fish token found\n",
-    "fishP.addPosition(1)\n",
-    "fishP.addPosition(2)\n",
-    "\n",
-    "print(fishP)"
+    "print(fishTok)"
    ]
   },
   {
@@ -73,17 +90,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tToken: empty\n",
-      "\t\tPositions: None\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{1, 2}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "emptyP = Posting('empty')\n",
-    "print(emptyP)"
+    "#Get positions of fish token in doc# 1\n",
+    "fishTok[1]['pos']"
    ]
   },
   {
@@ -95,30 +114,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DocId: 1\n",
-      "\tWeights:\n",
-      "\t\ttitle:{1, 20}\n",
-      "\t\tnormal:{21}\n",
-      "\t\tbold:{4}\n",
-      "DocId: 2\n",
-      "\tWeights:\n",
-      "\t\ttitle:{1}\n"
+      "\t\tWeights:\n",
+      "\t\t\ttitle:{9, 5}\n",
+      "\t\t\tbold:{4}\n"
      ]
     }
    ],
    "source": [
-    "#Create doc object to hold weights and multiple posting obj\n",
-    "doc1 = Document(1) \n",
-    "doc1.addWeight('title',(1))\n",
-    "doc1.addWeight('title',(20))\n",
-    "doc1.addWeight('normal',(21))\n",
-    "doc1.addWeight('bold',(4))\n",
-    "\n",
-    "doc2 = Document(2)\n",
-    "doc2.addWeight('title',(1))\n",
-    "\n",
-    "print(doc1)\n",
-    "print(doc2)"
+    "#Print weights of fish token in doc# 2\n",
+    "fishTok[2].printWeights()"
    ]
   },
   {
@@ -127,34 +131,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DocId: 1\n",
-      "\tWeights:\n",
-      "\t\ttitle:{1, 20}\n",
-      "\t\tnormal:{21}\n",
-      "\t\tbold:{4}\n",
-      "\tToken: fish\n",
-      "\t\tPositions: {1, 2}\n",
-      "\tToken: empty\n",
-      "\t\tPositions: None\n",
-      "DocId: 2\n",
-      "\tWeights:\n",
-      "\t\ttitle:{1}\n",
-      "\tToken: empty\n",
-      "\t\tPositions: None\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{5, 9}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Add postings to document(s)\n",
-    "doc1.addPosting(fishP)\n",
-    "doc1.addPosting(emptyP)\n",
-    "doc2.addPosting(emptyP)\n",
-    "\n",
-    "print(doc1)\n",
-    "print(doc2)"
+    "#Get title positions of fish token in doc# 2\n",
+    "fishTok[2]['wt']['title']"
    ]
   },
   {
@@ -166,30 +155,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size: 2\n",
-      "DocId: 1\n",
-      "\tWeights:\n",
-      "\t\ttitle:{1, 20}\n",
-      "\t\tnormal:{21}\n",
-      "\t\tbold:{4}\n",
-      "\tToken: fish\n",
+      "Total Tokens: 1\n",
+      "Token: fish, Total Freq: 5\n",
+      "\tDocId: 1, Freq: 2\n",
       "\t\tPositions: {1, 2}\n",
-      "\tToken: empty\n",
-      "\t\tPositions: None\n",
-      "DocId: 2\n",
-      "\tWeights:\n",
-      "\t\ttitle:{1}\n",
-      "\tToken: empty\n",
-      "\t\tPositions: None\n",
+      "\t\tWeights:\n",
+      "\t\t\ttitle:{1, 2}\n",
+      "\t\t\tnormal:{3}\n",
+      "\t\t\tbold:{4}\n",
+      "\tDocId: 2, Freq: 3\n",
+      "\t\tPositions: {10, 3, 7}\n",
+      "\t\tWeights:\n",
+      "\t\t\ttitle:{9, 5}\n",
+      "\t\t\tbold:{4}\n",
+      "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "#create inverted index obj to hold multiple documents\n",
-    "invIndex = InvertedIndex() \n",
-    "invIndex.addDoc(doc1)\n",
-    "invIndex.addDoc(doc2)\n",
+    "invIndex = InvertedIndex()\n",
+    "invIndex.addToken(fishTok)\n",
     "\n",
     "print(invIndex)"
    ]
@@ -202,8 +188,27 @@
     {
      "data": {
       "text/plain": [
-       "\tToken: fish\n",
-       "\t\tPositions: {1, 2}"
+       "Total Tokens: 2\n",
+       "Token: fish, Total Freq: 5\n",
+       "\tDocId: 1, Freq: 2\n",
+       "\t\tPositions: {1, 2}\n",
+       "\t\tWeights:\n",
+       "\t\t\ttitle:{1, 2}\n",
+       "\t\t\tnormal:{3}\n",
+       "\t\t\tbold:{4}\n",
+       "\tDocId: 2, Freq: 3\n",
+       "\t\tPositions: {10, 3, 7}\n",
+       "\t\tWeights:\n",
+       "\t\t\ttitle:{9, 5}\n",
+       "\t\t\tbold:{4}\n",
+       "\n",
+       "Token: tropical, Total Freq: 2\n",
+       "\tDocId: 1, Freq: 2\n",
+       "\t\tPositions: {1, 2}\n",
+       "\t\tWeights:\n",
+       "\t\t\ttitle:{1, 2}\n",
+       "\t\t\tnormal:{3}\n",
+       "\t\t\tbold:{4}\n"
       ]
      },
      "execution_count": 8,
@@ -212,8 +217,13 @@
     }
    ],
    "source": [
-    "#Go to doc 1 and get fish posting\n",
-    "invIndex[1]['fish']"
+    "#Create new Token using old posting obj\n",
+    "tropicalTok = Token('tropical')\n",
+    "tropicalTok.addPosting(fishP)\n",
+    "\n",
+    "invIndex.addToken(tropicalTok)\n",
+    "\n",
+    "invIndex"
    ]
   },
   {
@@ -224,7 +234,18 @@
     {
      "data": {
       "text/plain": [
-       "{1, 2}"
+       "Token: fish, Total Freq: 5\n",
+       "\tDocId: 1, Freq: 2\n",
+       "\t\tPositions: {1, 2}\n",
+       "\t\tWeights:\n",
+       "\t\t\ttitle:{1, 2}\n",
+       "\t\t\tnormal:{3}\n",
+       "\t\t\tbold:{4}\n",
+       "\tDocId: 2, Freq: 3\n",
+       "\t\tPositions: {10, 3, 7}\n",
+       "\t\tWeights:\n",
+       "\t\t\ttitle:{9, 5}\n",
+       "\t\t\tbold:{4}"
       ]
      },
      "execution_count": 9,
@@ -233,8 +254,8 @@
     }
    ],
    "source": [
-    "#Go to doc 1 and get fish posting positions\n",
-    "invIndex[1]['fish']['positions']"
+    "#Get all fish postings in inverted index\n",
+    "invIndex['fish']"
    ]
   },
   {
@@ -243,19 +264,25 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tWeights:\n",
-      "\t\ttitle:{1, 20}\n",
-      "\t\tnormal:{21}\n",
-      "\t\tbold:{4}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Token: tropical, Total Freq: 2\n",
+       "\tDocId: 1, Freq: 2\n",
+       "\t\tPositions: {1, 2}\n",
+       "\t\tWeights:\n",
+       "\t\t\ttitle:{1, 2}\n",
+       "\t\t\tnormal:{3}\n",
+       "\t\t\tbold:{4}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Go to doc1 and print its weights\n",
-    "invIndex[1].printWeights()"
+    "#Get all tropical postings in inverted index\n",
+    "invIndex['tropical']"
    ]
   },
   {
@@ -266,7 +293,12 @@
     {
      "data": {
       "text/plain": [
-       "{1, 20}"
+       "\tDocId: 1, Freq: 3\n",
+       "\t\tPositions: {1, 2, 3}\n",
+       "\t\tWeights:\n",
+       "\t\t\ttitle:{1, 2}\n",
+       "\t\t\tnormal:{3}\n",
+       "\t\t\tbold:{4}"
       ]
      },
      "execution_count": 11,
@@ -275,22 +307,129 @@
     }
    ],
    "source": [
-    "#Go to doc1 and get the positions of where title is\n",
-    "invIndex[1].getWeights()['title']"
+    "#Add position to tropical posting doc#1\n",
+    "invIndex['tropical'][1].addPosition(3)\n",
+    "invIndex['tropical'][1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\tDocId: 1, Freq: 3\n",
+       "\t\tPositions: {1, 2, 3}\n",
+       "\t\tWeights:\n",
+       "\t\t\ttitle:{1, 2}\n",
+       "\t\t\tnormal:{3}\n",
+       "\t\t\tbold:{4}\n",
+       "\t\t\th1:{10}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#We will go through documents using this data structure\n",
-    "\n",
-    "#Raw Data structure to hold token and docId sorted by decreasing total frequency of word\n",
-    "docId = 1\n",
-    "totalCountForDoc = 5\n",
-    "counts = { \"tropical\": [(docId,totalCountForDoc), (docId,totalCountForDoc)] }"
+    "#Add new weight field to tropical posting\n",
+    "invIndex['tropical'][1].addWeight('h1',10)\n",
+    "invIndex['tropical'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Get tropical normal weight in inverted index for doc 1\n",
+    "invIndex['tropical'][1]['wt']['normal']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Get all tropical positions in inverted index for doc 1\n",
+    "invIndex['tropical'][1]['pos']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token: tropical, Total Freq: 2\n",
+      "\tDocId: 1, Freq: 3\n",
+      "\t\tPositions: {1, 2, 3}\n",
+      "\t\tWeights:\n",
+      "\t\t\ttitle:{1, 2}\n",
+      "\t\t\tnormal:{3}\n",
+      "\t\t\tbold:{4}\n",
+      "\t\t\th1:{10}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Check if tropical token exists in invIndex\n",
+    "if 'tropical' in invIndex:\n",
+    "    print(invIndex['tropical'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Token 'IDK' does NOT exist!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32md:\\RJ\\UCI\\Ralph School\\2023 Spring\\CS 121\\Assignments\\A3WebSearch\\InvertDemov2.ipynb Cell 16\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/RJ/UCI/Ralph%20School/2023%20Spring/CS%20121/Assignments/A3WebSearch/InvertDemov2.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Get all a NON existing token in inverted index\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/RJ/UCI/Ralph%20School/2023%20Spring/CS%20121/Assignments/A3WebSearch/InvertDemov2.ipynb#X15sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m invIndex[\u001b[39m'\u001b[39;49m\u001b[39mIDK\u001b[39;49m\u001b[39m'\u001b[39;49m]\n",
+      "File \u001b[1;32md:\\RJ\\UCI\\Ralph School\\2023 Spring\\CS 121\\Assignments\\A3WebSearch\\HelperClass.py:118\u001b[0m, in \u001b[0;36mInvertedIndex.__getitem__\u001b[1;34m(self, tok)\u001b[0m\n\u001b[0;32m    117\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, tok):\n\u001b[1;32m--> 118\u001b[0m     \u001b[39massert\u001b[39;00m tok \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_index, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mToken \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mtok\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m does NOT exist!\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    119\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_index[tok]\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Token 'IDK' does NOT exist!"
+     ]
+    }
+   ],
+   "source": [
+    "#Get all a NON existing token in inverted index\n",
+    "invIndex['IDK']"
    ]
   }
  ],
