--- a/TokenizerWeight_Demo.ipynb
+++ b/TokenizerWeight_Demo.ipynb
@@ -13,8 +13,8 @@
     "# parsedInput = Tokenizer('Test.json')\n",
     "# parsedInput.printFreq()\n",
     "\n",
-    "from HelperClass import HTMLTokenizer\n",
-    "from helper import cleanHtml"
+    "from HelperClass import HTMLTokenizer, InvertedIndex\n",
+    "from helper import cleanHtml, tokenizeHtml"
    ]
   },
   {
@@ -92,62 +92,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DocId: 1\n",
-      "\tWeights:\n",
-      "\t\ttitle:{1, 2}\n",
-      "\t\th2:{3, 4, 5, 6}\n",
-      "\t\ta:{6}\n",
-      "\t\tnormal:{7, 8, 9, 10, 11}\n",
-      "\tToken: my\n",
+      "Total Tokens: 9\n",
+      "Token: my, Total Freq: 0\n",
+      "\tDocId: 1, Freq: 2\n",
       "\t\tPositions: {1, 5}\n",
-      "\tToken: page\n",
+      "\t\tWeights:\n",
+      "\t\t\ttitle:{1}\n",
+      "\t\t\th2:{5}\n",
+      "\n",
+      "Token: page, Total Freq: 0\n",
+      "\tDocId: 1, Freq: 2\n",
       "\t\tPositions: {2, 6}\n",
-      "\tToken: welcome\n",
+      "\t\tWeights:\n",
+      "\t\t\ttitle:{2}\n",
+      "\t\t\ta:{6}\n",
+      "\t\t\th2:{6}\n",
+      "\n",
+      "Token: welcome, Total Freq: 0\n",
+      "\tDocId: 1, Freq: 1\n",
       "\t\tPositions: {3}\n",
-      "\tToken: to\n",
+      "\t\tWeights:\n",
+      "\t\t\th2:{3}\n",
+      "\n",
+      "Token: to, Total Freq: 0\n",
+      "\tDocId: 1, Freq: 1\n",
       "\t\tPositions: {4}\n",
-      "\tToken: this\n",
+      "\t\tWeights:\n",
+      "\t\t\th2:{4}\n",
+      "\n",
+      "Token: this, Total Freq: 0\n",
+      "\tDocId: 1, Freq: 1\n",
       "\t\tPositions: {7}\n",
-      "\tToken: is\n",
+      "\t\tWeights:\n",
+      "\t\t\tnormal:{7}\n",
+      "\n",
+      "Token: is, Total Freq: 0\n",
+      "\tDocId: 1, Freq: 1\n",
       "\t\tPositions: {8}\n",
-      "\tToken: the\n",
+      "\t\tWeights:\n",
+      "\t\t\tnormal:{8}\n",
+      "\n",
+      "Token: the, Total Freq: 0\n",
+      "\tDocId: 1, Freq: 1\n",
       "\t\tPositions: {9}\n",
-      "\tToken: first\n",
+      "\t\tWeights:\n",
+      "\t\t\tnormal:{9}\n",
+      "\n",
+      "Token: first, Total Freq: 0\n",
+      "\tDocId: 1, Freq: 1\n",
       "\t\tPositions: {10}\n",
-      "\tToken: paragraph\n",
-      "\t\tPositions: {11}\n"
+      "\t\tWeights:\n",
+      "\t\t\tnormal:{10}\n",
+      "\n",
+      "Token: paragraph, Total Freq: 0\n",
+      "\tDocId: 1, Freq: 1\n",
+      "\t\tPositions: {11}\n",
+      "\t\tWeights:\n",
+      "\t\t\tnormal:{11}\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "parser = HTMLTokenizer() #Create parser obj\n",
-    "parser.feed(cleanHtml(htmlContent)) #pass in clean html to parse\n",
-    "parser.getDoc().setDocId(1) #Set docId\n",
-    "doc = parser.getDoc()\n",
-    "parser.clear() #reset parser to parse new doc\n",
+    "invIndex = InvertedIndex() #Create inverted index to hold tokens from parser\n",
     "\n",
-    "print(doc)"
+    "#Cleans and parses HTML content into tokens then adds it to Inverted index\n",
+    "tokenizeHtml(docId=1, invIndex=invIndex, htmlContent=htmlContent)\n",
+    "print(invIndex)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DocId: 0\n",
-       "\tWeights:None"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "parser.getDoc() #Parser cleared so doc contains no items"
+    "# parser.clear() #reset parser to parse new doc\n",
+    "# parser.getDoc() #Parser cleared so doc contains no items"
    ]
   }
  ],
