--- a/TokenizerWeight_Demo.ipynb
+++ b/TokenizerWeight_Demo.ipynb
@@ -93,59 +93,98 @@
      "output_type": "stream",
      "text": [
       "Total Tokens: 9\n",
-      "Token: my, Total Freq: 2\n",
+      "Token: my, Total Freq: 4\n",
       "\tDocId: 1, Freq: 2\n",
       "\t\tPositions: {1, 5}\n",
       "\t\tWeights:\n",
       "\t\t\ttitle:{1}\n",
       "\t\t\th2:{5}\n",
+      "\tDocId: 2, Freq: 2\n",
+      "\t\tPositions: {1, 5}\n",
+      "\t\tWeights:\n",
+      "\t\t\ttitle:{1}\n",
+      "\t\t\th2:{5}\n",
       "\n",
-      "Token: page, Total Freq: 2\n",
+      "Token: page, Total Freq: 4\n",
       "\tDocId: 1, Freq: 2\n",
       "\t\tPositions: {2, 6}\n",
       "\t\tWeights:\n",
       "\t\t\ttitle:{2}\n",
-      "\t\t\ta:{6}\n",
       "\t\t\th2:{6}\n",
+      "\t\t\ta:{6}\n",
+      "\tDocId: 2, Freq: 2\n",
+      "\t\tPositions: {2, 6}\n",
+      "\t\tWeights:\n",
+      "\t\t\ttitle:{2}\n",
+      "\t\t\th2:{6}\n",
+      "\t\t\ta:{6}\n",
       "\n",
-      "Token: welcome, Total Freq: 1\n",
+      "Token: welcome, Total Freq: 2\n",
       "\tDocId: 1, Freq: 1\n",
       "\t\tPositions: {3}\n",
       "\t\tWeights:\n",
       "\t\t\th2:{3}\n",
+      "\tDocId: 2, Freq: 1\n",
+      "\t\tPositions: {3}\n",
+      "\t\tWeights:\n",
+      "\t\t\th2:{3}\n",
       "\n",
-      "Token: to, Total Freq: 1\n",
+      "Token: to, Total Freq: 2\n",
       "\tDocId: 1, Freq: 1\n",
       "\t\tPositions: {4}\n",
       "\t\tWeights:\n",
       "\t\t\th2:{4}\n",
+      "\tDocId: 2, Freq: 1\n",
+      "\t\tPositions: {4}\n",
+      "\t\tWeights:\n",
+      "\t\t\th2:{4}\n",
       "\n",
-      "Token: this, Total Freq: 1\n",
+      "Token: this, Total Freq: 2\n",
       "\tDocId: 1, Freq: 1\n",
       "\t\tPositions: {7}\n",
       "\t\tWeights:\n",
       "\t\t\tnormal:{7}\n",
+      "\tDocId: 2, Freq: 1\n",
+      "\t\tPositions: {7}\n",
+      "\t\tWeights:\n",
+      "\t\t\tnormal:{7}\n",
       "\n",
-      "Token: is, Total Freq: 1\n",
+      "Token: is, Total Freq: 2\n",
       "\tDocId: 1, Freq: 1\n",
       "\t\tPositions: {8}\n",
       "\t\tWeights:\n",
       "\t\t\tnormal:{8}\n",
+      "\tDocId: 2, Freq: 1\n",
+      "\t\tPositions: {8}\n",
+      "\t\tWeights:\n",
+      "\t\t\tnormal:{8}\n",
       "\n",
-      "Token: the, Total Freq: 1\n",
+      "Token: the, Total Freq: 2\n",
       "\tDocId: 1, Freq: 1\n",
       "\t\tPositions: {9}\n",
       "\t\tWeights:\n",
       "\t\t\tnormal:{9}\n",
+      "\tDocId: 2, Freq: 1\n",
+      "\t\tPositions: {9}\n",
+      "\t\tWeights:\n",
+      "\t\t\tnormal:{9}\n",
       "\n",
-      "Token: first, Total Freq: 1\n",
+      "Token: first, Total Freq: 2\n",
       "\tDocId: 1, Freq: 1\n",
       "\t\tPositions: {10}\n",
       "\t\tWeights:\n",
       "\t\t\tnormal:{10}\n",
+      "\tDocId: 2, Freq: 1\n",
+      "\t\tPositions: {10}\n",
+      "\t\tWeights:\n",
+      "\t\t\tnormal:{10}\n",
       "\n",
-      "Token: paragraph, Total Freq: 1\n",
+      "Token: paragraph, Total Freq: 2\n",
       "\tDocId: 1, Freq: 1\n",
+      "\t\tPositions: {11}\n",
+      "\t\tWeights:\n",
+      "\t\t\tnormal:{11}\n",
+      "\tDocId: 2, Freq: 1\n",
       "\t\tPositions: {11}\n",
       "\t\tWeights:\n",
       "\t\t\tnormal:{11}\n",
@@ -159,6 +198,7 @@
     "\n",
     "#Cleans and parses HTML content into tokens then adds it to Inverted index\n",
     "tokenizeHtml(docId=1, invIndex=invIndex, htmlContent=htmlContent)\n",
+    "tokenizeHtml(docId=2, invIndex=invIndex, htmlContent=htmlContent)\n",
     "print(invIndex)"
    ]
   }
