update demo to include if in checks

--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -415,21 +415,92 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tDocId: 1, Freq: 3\n",
+      "\t\tPositions: {1, 2, 3}\n",
+      "\t\tWeights:\n",
+      "\t\t\ttitle:{1, 2}\n",
+      "\t\t\tnormal:{3}\n",
+      "\t\t\tbold:{4}\n",
+      "\t\t\th1:{10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Check if doc#1 has a tropical posting\n",
+    "if 1 in invIndex['tropical']:\n",
+    "    print(invIndex['tropical'][1])\n",
+    "else:\n",
+    "    print(\"Doc 1 does not have a tropical posting\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doc 2 does not have a tropical posting\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Check if doc#2 has a tropical posting\n",
+    "if 2 in invIndex['tropical']:\n",
+    "    print(invIndex['tropical'][2])\n",
+    "else:\n",
+    "    print(\"Doc 2 does not have a tropical posting\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
      "ename": "AssertionError",
      "evalue": "Token 'IDK' does NOT exist!",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32md:\\RJ\\UCI\\Ralph School\\2023 Spring\\CS 121\\Assignments\\A3WebSearch\\InvertDemov2.ipynb Cell 16\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/RJ/UCI/Ralph%20School/2023%20Spring/CS%20121/Assignments/A3WebSearch/InvertDemov2.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Get all a NON existing token in inverted index\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/RJ/UCI/Ralph%20School/2023%20Spring/CS%20121/Assignments/A3WebSearch/InvertDemov2.ipynb#X15sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m invIndex[\u001b[39m'\u001b[39;49m\u001b[39mIDK\u001b[39;49m\u001b[39m'\u001b[39;49m]\n",
-      "File \u001b[1;32md:\\RJ\\UCI\\Ralph School\\2023 Spring\\CS 121\\Assignments\\A3WebSearch\\HelperClass.py:118\u001b[0m, in \u001b[0;36mInvertedIndex.__getitem__\u001b[1;34m(self, tok)\u001b[0m\n\u001b[0;32m    117\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, tok):\n\u001b[1;32m--> 118\u001b[0m     \u001b[39massert\u001b[39;00m tok \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_index, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mToken \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mtok\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m does NOT exist!\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    119\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_index[tok]\n",
+      "\u001b[1;32md:\\RJ\\UCI\\Ralph School\\2023 Spring\\CS 121\\Assignments\\A3WebSearch\\InvertedIndex_Demo.ipynb Cell 18\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/RJ/UCI/Ralph%20School/2023%20Spring/CS%20121/Assignments/A3WebSearch/InvertedIndex_Demo.ipynb#X61sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Get a NON existing token in inverted index\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/RJ/UCI/Ralph%20School/2023%20Spring/CS%20121/Assignments/A3WebSearch/InvertedIndex_Demo.ipynb#X61sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m invIndex[\u001b[39m'\u001b[39;49m\u001b[39mIDK\u001b[39;49m\u001b[39m'\u001b[39;49m]\n",
+      "File \u001b[1;32md:\\RJ\\UCI\\Ralph School\\2023 Spring\\CS 121\\Assignments\\A3WebSearch\\HelperClass.py:128\u001b[0m, in \u001b[0;36mInvertedIndex.__getitem__\u001b[1;34m(self, tok)\u001b[0m\n\u001b[0;32m    127\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, tok):\n\u001b[1;32m--> 128\u001b[0m     \u001b[39massert\u001b[39;00m tok \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_index, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mToken \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mtok\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m does NOT exist!\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    129\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_index[tok]\n",
       "\u001b[1;31mAssertionError\u001b[0m: Token 'IDK' does NOT exist!"
      ]
     }
    ],
    "source": [
-    "#Get all a NON existing token in inverted index\n",
+    "#Get a NON existing token in inverted index\n",
     "invIndex['IDK']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Document #2 does NOT exist!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32md:\\RJ\\UCI\\Ralph School\\2023 Spring\\CS 121\\Assignments\\A3WebSearch\\InvertedIndex_Demo.ipynb Cell 19\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/RJ/UCI/Ralph%20School/2023%20Spring/CS%20121/Assignments/A3WebSearch/InvertedIndex_Demo.ipynb#X64sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Get a NON existing posting in inverted index\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/RJ/UCI/Ralph%20School/2023%20Spring/CS%20121/Assignments/A3WebSearch/InvertedIndex_Demo.ipynb#X64sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m invIndex[\u001b[39m'\u001b[39;49m\u001b[39mtropical\u001b[39;49m\u001b[39m'\u001b[39;49m][\u001b[39m2\u001b[39;49m]\n",
+      "File \u001b[1;32md:\\RJ\\UCI\\Ralph School\\2023 Spring\\CS 121\\Assignments\\A3WebSearch\\HelperClass.py:92\u001b[0m, in \u001b[0;36mToken.__getitem__\u001b[1;34m(self, docId)\u001b[0m\n\u001b[0;32m     91\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, docId:\u001b[39mint\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Posting:\n\u001b[1;32m---> 92\u001b[0m     \u001b[39massert\u001b[39;00m docId \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_postings, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mDocument #\u001b[39m\u001b[39m{\u001b[39;00mdocId\u001b[39m}\u001b[39;00m\u001b[39m does NOT exist!\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     93\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_postings[docId]\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Document #2 does NOT exist!"
+     ]
+    }
+   ],
+   "source": [
+    "#Get a NON existing posting in inverted index\n",
+    "invIndex['tropical'][2]"
    ]
   }
  ],
