parse aiclub_ics_uci_edu folder

--- a/ShelveWrite_Demo.ipynb
+++ b/ShelveWrite_Demo.ipynb
@@ -170,35 +170,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "2:3;\n",
-      "2:10,3,7;\n",
-      "2-title:9,5,bold:4;\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import shelve\n",
     "filePath = 'Shelve' #Create this folder\n",
+    "def readShelve(filePath:str, token:str):\n",
+    "    with shelve.open(f'{filePath}/DocId', 'c') as shelf:\n",
+    "        print(shelf[token])\n",
     "\n",
-    "with shelve.open(f'{filePath}/DocId', 'c') as shelf:\n",
-    "    print(shelf['notFish'])\n",
+    "    with shelve.open(f'{filePath}/Freq', 'c') as shelf:\n",
+    "        print(shelf[token])\n",
     "\n",
-    "with shelve.open(f'{filePath}/Freq', 'c') as shelf:\n",
-    "    print(shelf['notFish'])\n",
+    "    with shelve.open(f'{filePath}/Pos', 'c') as shelf:\n",
+    "        print(shelf[token])\n",
     "\n",
-    "with shelve.open(f'{filePath}/Pos', 'c') as shelf:\n",
-    "    print(shelf['notFish'])\n",
-    "\n",
-    "with shelve.open(f'{filePath}/Fields', 'c') as shelf:\n",
-    "    print(shelf['notFish'])"
+    "    with shelve.open(f'{filePath}/Fields', 'c') as shelf:\n",
+    "        print(shelf[token])"
    ]
   },
   {
@@ -218,17 +207,27 @@
     }
    ],
    "source": [
-    "with shelve.open(f'{filePath}/DocId', 'c') as shelf:\n",
-    "    print(shelf['fish'])\n",
-    "\n",
-    "with shelve.open(f'{filePath}/Freq', 'c') as shelf:\n",
-    "    print(shelf['fish'])\n",
-    "\n",
-    "with shelve.open(f'{filePath}/Pos', 'c') as shelf:\n",
-    "    print(shelf['fish'])\n",
-    "\n",
-    "with shelve.open(f'{filePath}/Fields', 'c') as shelf:\n",
-    "    print(shelf['fish'])"
+    "readShelve(filePath, 'fish')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1:1;\n",
+      "1:16;\n",
+      "1-normal:16;\n"
+     ]
+    }
+   ],
+   "source": [
+    "readShelve('DevShelve', 'fall')"
    ]
   }
  ],
