create parseDev.py remove shelve files

--- a/ParseDev.ipynb
+++ b/ParseDev.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "import os\n",
     "rootDir = 'D:\\\\RJ\\\\UCI\\\\Ralph School\\\\2023 Spring\\\\CS 121\\\\Assignments\\\\.vscode\\\\Res\\\\DEV'\n",
-    "rootDir += '\\\\alderis_ics_uci_edu'\n",
-    "\n",
+    "rootDir += '\\\\aiclub_ics_uci_edu'\n",
     "jsonFiles = []\n",
     "for root, dirs, files in os.walk(rootDir):\n",
     "    for name in files:\n",
@@ -75,7 +74,17 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 https://aiclub.ics.uci.edu/\n",
+      "2 https://aiclub.ics.uci.edu/#body\n",
+      "3 https://aiclub.ics.uci.edu/index.html\n"
+     ]
+    }
+   ],
    "source": [
     "invIndex = InvertedIndex() #Create inverted index to hold tokens from parser\n",
     "docId = getDocNum()\n",
@@ -87,7 +96,8 @@
     "    invIndex.write('DevShelve')\n",
     "    invIndex.clear()\n",
     "    writeDoc(docId, url)\n",
-    "    storeDocNum(docId)"
+    "    storeDocNum(docId)\n",
+    "    print(docId, url)"
    ]
   }
  ],
