parse test files

--- a/ParseDev.ipynb
+++ b/ParseDev.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "rootDir = 'D:\\\\RJ\\\\UCI\\\\Ralph School\\\\2023 Spring\\\\CS 121\\\\Assignments\\\\.vscode\\\\Res\\\\DEV'\n",
+    "rootDir = 'D:\\\\RJ\\\\UCI\\\\Ralph School\\\\2023 Spring\\\\CS 121\\\\Assignments\\\\.vscode\\\\Res\\\\Test'\n",
     "jsonFiles = []\n",
     "for root, dirs, files in os.walk(rootDir):\n",
     "    for name in files:\n",
