--- a/ParseDev.ipynb
+++ b/ParseDev.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,9 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 https://www.ics.uci.edu/~irani/s15-6D/ClassNotes/23_GeneratingPermsSubsets.html\n",
+      "2 https://grape.ics.uci.edu/wiki/public/wiki/cs222-2019-fall-git?version=4\n",
+      "3 http://archive.ics.uci.edu/ml/datasets/Gas+sensor+array+exposed+to+turbulent+gas+mixtures\n",
+      "4 http://alderis.ics.uci.edu/links.html\n",
+      "5 https://aiclub.ics.uci.edu/\n"
+     ]
+    }
+   ],
    "source": [
     "invIndex = InvertedIndex() #Create inverted index to hold tokens from parser\n",
     "docId = getDocNum()\n",
