--- a/Query_Demo.ipynb
+++ b/Query_Demo.ipynb
@@ -12,20 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shows up in documents: 2,3,4,5\n",
-      "Frequency: 2:5;3:1;4:3;5:6;\n",
-      "Positions: 2:385,1025,298,268,767;3:4;4:417,5,46;5:291,6564,2246,335,15,275;\n",
-      "Fields: 2-normal:385,1025,298,268,767;3-title:4;4-title:5,h1:46,normal:417;5-title:15,h1:275,h3:291,335,normal:2246,footer:6564;\n",
-      "2:5;3:1;4:3;5:6;\n",
-      "2:385,1025,298,268,767;3:4;4:417,5,46;5:291,6564,2246,335,15,275;\n",
-      "2-normal:385,1025,298,268,767;3-title:4;4-title:5,h1:46,normal:417;5-title:15,h1:275,h3:291,335,normal:2246,footer:6564;\n"
+      "Shows up in documents: 2\n",
+      "Frequency: 2:6;\n",
+      "Positions: 2:1088,930,935,942,1083,926;\n",
+      "Fields: 2-normal:1088,930,935,942,1083,926;\n",
+      "2:6;\n",
+      "2:1088,930,935,942,1083,926;\n",
+      "2-normal:1088,930,935,942,1083,926;\n"
      ]
     }
    ],
@@ -33,7 +33,7 @@
     "shelveDb = ShelveDB()\n",
     "totalDoc = shelveDb.getTotalDocNum() #5\n",
     "\n",
-    "token = 'uci'\n",
+    "token = 'hello'\n",
     "postId = shelveDb.getPostId(token)\n",
     "tFreq = shelveDb.getTokenFreq(token)\n",
     "tPos = shelveDb.getTokenPos(token)\n",
